preparing for a new tag publish

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "key-ssi-resolver",
-    "version": "",
+    "version": "v1.0.1",
     "description": "",
     "main": "index.js",
     "directories": {
